# environments/backend/src/routes/user.ts
@@ -1,4 +1,0 @@
-import router from 'Routes/router'
-import { getUser } from 'Controllers/user'
-
-router.get('/user', getUser)
